--- a/Rock paper scissors/index.html
+++ b/Rock paper scissors/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
     <script src="script.js"></script>
 </head>
+
 <body>
+    <p>First to five Rock paper scissors</p>
     <button onclick="playRound('rock')">Rock</button>
     <button onclick="playRound('paper')">Paper</button>
     <button onclick="playRound('scissors')">Scissors</button>
     <p id="result"></p>
+    <p id="playerPoints">0</p>
+    <p id="computerPoints">0</p>
 </body>
+
 </html>
