--- a/form validation/index.html
+++ b/form validation/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form validation</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <form id="signup-form">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" required>
+            <div class="error-message hidden" id="email-error"></div>
+        </div>
+        <div class="form-group">
+            <label for="country">Country</label>
+            <input type="text" id="country" required>
+            <div class="error-message hidden" id="country-error"></div>
+        </div>
+        <div class="form-group">
+            <label for="zip">Zip Code</label>
+            <input type="text" id="zip" required>
+            <div class="error-message hidden" id="zip-error"></div>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" required>
+            <div class="error-message hidden" id="password-error"></div>
+        </div>
+        <div class="form-group">
+            <label for="password-confirm">Confirm Password</label>
+            <input type="password" id="password-confirm" required>
+            <div class="error-message hidden" id="password-confirm-error"></div>
+        </div>
+        <button type="button" id="submit-button">Submit</button>
+    </form>
+    <div id="success-message" class="hidden">
+        High five! Form submitted successfully.
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
